rules/themes/files/Geos-puavo-dark-panel/gnome-shell/gnome-shell.css
/* ... */
.switcher-list .item-box {
  padding: 8px;
  border-radius: 4px; }

.switcher-list .item-box:outlined {
  padding: 6px;
  border: 2px solid rgba(0, 0, 0, 0.88); }

.switcher-list .item-box:selected {
  background-color: rgb(28,131,196);
  color: #ffffff; }

.switcher-list .thumbnail-box {
  padding: 2px;
  spacing: 4px; }

.switcher-list .thumbnail {
  width: 256px; }

.switcher-list .separator {
  width: 1px;
  background: #1c1f1f; }

.switcher-arrow {
  border-color: transparent;
  color: rgba(0, 0, 0, 0.88); }
  .switcher-arrow:highlighted {
    color: #eeeeec; }

.input-source-switcher-symbol {
  font-size: 34pt;
  width: 96px;
  height: 96px; }

/* Workspace Switcher */
.workspace-switcher-group {
  padding: 12px; }

.workspace-switcher {
  background: transparent;
  border: 0px;
  border-radius: 0px;
  padding: 0px;
  spacing: 8px; }

.ws-switcher-active-up, .ws-switcher-active-down {
  height: 50px;
  background-color: rgb(68,171,236);
  color: #ffffff;
  background-size: 32px;
  border-radius: 0px; }

.ws-switcher-box {
  height: 50px;
  border: 1px solid rgba(238, 238, 236, 0.1);
  background: transparent;
  border-radius: 0px; }

.osd-window,
.resize-popup,
.switcher-list, .workspace-switcher-container {
  color: #eeeeec;
  background-color: #2e3436;
  border: 1px solid rgba(238, 238, 236, 0.2);
  border-radius: 12px;
  padding: 12px; }

/* Tiled window previews */
.tile-preview {
  background-color: rgb(28,131,196);
  border: 1px solid rgb(28,131,196); }

.tile-preview-left.on-primary {
  border-radius: 0px 0px 0 0; }

.tile-preview-right.on-primary {
  border-radius: 0 0px 0 0; }

.tile-preview-left.tile-preview-right.on-primary {
  border-radius: 0px 0px 0 0; }

/* TOP BAR */
#panel {
  background-color: rgba(250,250,250,0.2);
  text-shadow: none;
  font-weight: normal;
  box-shadow: 0 0px 4px 3px rgba(0, 0, 0, 0.80); 
  height: 2.8em; }
  #panel.unlock-screen, #panel.login-screen, #panel.lock-screen {
    background-color: transparent; }
  #panel #panelLeft, #panel #panelCenter {
    spacing: 4px; }
  #panel .panel-corner {
    -panel-corner-radius: 0px;
    -panel-corner-background-color: none;
    -panel-corner-border-width: 0px;
    -panel-corner-border-color: transparent; }
    #panel .panel-corner:active, #panel .panel-corner:overview, #panel .panel-corner:focus {
      -panel-corner-border-color: none; }
    #panel .panel-corner.lock-screen, #panel .panel-corner.login-screen, #panel .panel-corner.unlock-screen {
      -panel-corner-radius: 0;
      -panel-corner-background-color: none;
      -panel-corner-border-color: transparent; }
  #panel .panel-button {
    background-color: rgba(0,0,0,0.40);
    -natural-hpadding: 2px;
    -minimum-hpadding: 2px;
    font-weight: bold;
    color: white;
    text-shadow: 0 1px grey;
    icon-shadow: 0 1px black;
    padding-left: 1em;
    transition-duration: 100ms; }
    #panel .panel-button .app-menu-icon {
      -st-icon-style: symbolic;
      margin-left: 6px;
      margin-right: 6px; }
    #panel .panel-button:hover {
      color: rgba(240,240,240,0.9); }
    #panel .panel-button:active, #panel .panel-button:overview, #panel .panel-button:focus, #panel .panel-button:checked {
      background-color: rgba(0, 0, 0, 0.5);
      /*box-shadow: inset 0 -2px 0px rgba(28,131,196,0);*/
      color: rgba(240,240,240,0.9);; }
      #panel .panel-button:active > .system-status-icon, #panel .panel-button:overview > .system-status-icon, #panel .panel-button:focus > .system-status-icon, #panel .panel-button:checked > .system-status-icon {
        icon-shadow: black 0 2px 2px; }
    #panel .panel-button .system-status-icon {
      icon-size: 1.5§em;
      padding: 0 9px; }
    .unlock-screen #panel .panel-button, .login-screen #panel .panel-button, .lock-screen #panel .panel-button {
      color: white; }
      .unlock-screen #panel .panel-button:focus, .unlock-screen #panel .panel-button:hover, .unlock-screen #panel .panel-button:active, .login-screen #panel .panel-button:focus, .login-screen #panel .panel-button:hover, .login-screen #panel .panel-button:active, .lock-screen #panel .panel-button:focus, .lock-screen #panel .panel-button:hover, .lock-screen #panel .panel-button:active {
        color: white; }
  #panel .panel-status-indicators-box,
  #panel .panel-status-menu-box {
    spacing: 2px; }
  #panel .power-status.panel-status-indicators-box {
    spacing: 0; }
  #panel .screencast-indicator {
    color: #f57900; }

#panel:overview {
    background-color: transparent;
    border-color: transparent;
    box-shadow: inset 0px rgba(0,0,0,0);
}
.panel-button-webmenu{
    background:rgba(0,0,0,0.40);
    padding-left: 1em; 
    padding-right: 1em; 
    color:white;
}

.panel-button-indicator{
    padding-left: 1em; 
    padding-right: 1em; 
    color:white;
}



/*Calendar Menu*/


#calendarArea {
  padding: 0.55em 0.85em; }

.calendar {
  margin-bottom: 1em; }

.calendar,
.datemenu-today-button,
.datemenu-displays-box,
.message-list-sections {
  margin: 0 1.5em;

}
.datemenu-calendar-column {
  spacing: 0.5em; }

.datemenu-displays-section {
  padding-bottom: 3em; }

.datemenu-today-button,
.world-clocks-button,
.message-list-section-title {
  border-radius: 0px;
  padding: .4em; }

.message-list-section-list:ltr {
  padding-left: .4em; }

.message-list-section-list:rtl {
  padding-right: .4em; }

.datemenu-today-button:hover, .datemenu-today-button:focus,
.message-list-section-title:hover,
.message-list-section-title:focus {
  background-color: rgb(220,220,220);}

.datemenu-today-button:active,
.world-clocks-button:active,
.message-list-section-title:active {
  background-color: rgb(68,171,236);
  color: #000; }

.datemenu-today-button .date-label {
  font-size: 1.5em;
  border: solid 1px;
  padding: 0px 30px ;
  box-shadow: inset 0px 0px 0px 1px rgba(95,95,95, 0.35);
  background-color: rgb(68,171,236);
  background-size: contain;  
  border-radius: 4px;
  color: #fff;
  text-shadow: rgba(0,0,0,0.4) 0px 1px 0px;  }
/* ... */

